--- a/Eventlly/api/.env
+++ b/Eventlly/api/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://saitama:YO7AhoK3zC1g4PM5@cluster0.yhgmtba.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL="Put the connection string here"
